name:                yab2
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/yab2#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable yab2
  hs-source-dirs:      app
  main-is:             Main2.hs
  other-modules:       CSV
                     , Data.Audit
                     , Data.Bank
                     , Data.Budget
                     , Data.Budget.Budget
                     , Data.Budget.Expense
                     , Data.Budget.Internal
                     , Data.Default.IxSet
                     , Data.Default.Time
                     , Data.BID
                     , YabAcid
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , acid-state
                     , bytestring
                     , cassava
                     , directory
                     , containers
                     , snap
                     , snap-core
                     , snap-web-routes
                     , data-default
                     , web-routes
                     , exceptions
                     , filepath
                     , ixset
                     , optparse-applicative
                     , hashable
                     , lens
                     , mtl
                     , safecopy
                     , text
                     , time
                     , vector
                     , aeson
  default-language:    Haskell2010

--test-suite yab2-test
  --type:                exitcode-stdio-1.0
  --hs-source-dirs:      test
  --main-is:             Spec.hs
  --build-depends:       base
  --ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  --default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/yab2
